Enlaces de _top a _self

--- a/lineadecodigo_web/WebContent/scripting/jQuery/enlaces-top-a-self.html
+++ b/lineadecodigo_web/WebContent/scripting/jQuery/enlaces-top-a-self.html
@@ -23,7 +23,7 @@ $(document).ready(function(){
 
 <br><br>
 <hr>
-Art&iacute;culo disponible en: <a href="enlaces-de-top-a-self-con-jquery/">enlaces-de-top-a-self-con-jquery/</a><br/>
+Art&iacute;culo disponible en: <a href="http://lineadecodigo.com/jquery/enlaces-de-top-a-self-con-jquery/">http://lineadecodigo.com/jquery/enlaces-de-top-a-self-con-jquery/</a><br/>
 <a href="http://lineadecodigo.com" title="Linea de Codigo">lineadecodigo.com</a>
 
 </body>
