--- a/lineadecodigo_web/WebContent/scripting/jQuery/arrays/filtrar-elementos-array-jquery.html
+++ b/lineadecodigo_web/WebContent/scripting/jQuery/arrays/filtrar-elementos-array-jquery.html
@@ -24,7 +24,7 @@ $("#resultado").text(a.join(", "));
 </script>
 
 <hr>
-Art&iacute;culo disponible en: <a href="http://lineadecodigo.com/jquery/xxx/">http://lineadecodigo.com/jquery/xxx/</a><br/>
+Art&iacute;culo disponible en: <a href="http://lineadecodigo.com/jquery/filtrar-elementos-de-un-array-con-jquery/">http://lineadecodigo.com/jquery/filtrar-elementos-de-un-array-con-jquery/</a><br/>
 <a href="http://lineadecodigo.com" title="Linea de Codigo">lineadecodigo.com</a>
 
 
