--- a/lineadecodigo_web/WebContent/scripting/jQuery/formularios/seleccionar-si-no-cambio-el-texto.html
+++ b/lineadecodigo_web/WebContent/scripting/jQuery/formularios/seleccionar-si-no-cambio-el-texto.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <title>Seleccionar si no ha cambiado el texto</title>
-<script type="text/javascript" src="../jquery-1.2.6.js"></script>
+<script type="text/javascript" src="http://lineadecodigo.com/js/jquery/jquery.js"></script>
 <script type="text/javascript">
 $(document).ready(function(){	
 	$("textarea").focus(function(){	    
