Efecto más texto con jQuery (simplificado y normal)

--- a/lineadecodigo_web/WebContent/scripting/jQuery/efectos/mas-texto.html
+++ b/lineadecodigo_web/WebContent/scripting/jQuery/efectos/mas-texto.html
@@ -41,7 +41,7 @@ $(document).ready(function(){
 <body>
 
 
-<h1>Titulo</h1>
+<h1>Efecto más texto (sobre página sin estructura predefinida)</h1>
 <div class="comentario">
 	Lorem ipsum dolor sit amet, vis alterum feugiat sanctus ea. Affert facete eu cum, ut dicta vitae quo. Cum id aeque option epicuri, nec oblique suscipit ad. Et sea odio adhuc altera. Verterem nominati an mel, his diam consetetur ei. Eligendi principes sed no, ubique patrioque vix cu, soluta veritus percipit vim ex.<br>
 	Pro populo dolorem eu. Justo conclusionemque sea ne. At dicat putent eum. Reprimique delicatissimi vel et.<br>
