--- a/lineadecodigo_web/WebContent/scripting/jQuery/efectos/mas-texto-2.html
+++ b/lineadecodigo_web/WebContent/scripting/jQuery/efectos/mas-texto-2.html
@@ -12,7 +12,7 @@
 	display:none;
 	}
 </style>
-<script type="text/javascript" src="../jquery.js"></script>
+<script type="text/javascript" src="http://lineadecodigo.com/js/jquery/jquery.js"></script>
 <script type="text/javascript">
 
 $(document).ready(function(){	
