--- a/lineadecodigo_web/WebContent/scripting/javascript/arryas/inicializar-array.html
+++ b/lineadecodigo_web/WebContent/scripting/javascript/arryas/inicializar-array.html
@@ -6,6 +6,8 @@
 </head>
 <body>
 
+<h1>Inicializar un array en Javascript</h1>
+
 <script>
 var ciudades = new Array("Avila","Salamanca","Zamora","León");
 
@@ -17,12 +19,15 @@ ciudades2[3] = "León";
 
 var mixto = new Array("Victor",34,true);
 
+document.write("Listado el primer array<br>");
 for (x=0;x<ciudades.length;x++)
 	document.write(ciudades[x] + "<br/>");
-	
+
+document.write("<br>Listado el segundo array<br>");
 for (x=0;x<ciudades2.length;x++)
 	document.write(ciudades2[x] + "<br/>");
 
+document.write("<br>Listado el tercer array<br>");
 for (x=0;x<mixto.length;x++)
 	document.write(mixto[x] + "<br/>");
 </script>
