--- a/lineadecodigo_web/WebContent/scripting/javascript_apis/modernizr/polyfills/fd-slider/polyfill-slider.html
+++ b/lineadecodigo_web/WebContent/scripting/javascript_apis/modernizr/polyfills/fd-slider/polyfill-slider.html
@@ -7,7 +7,7 @@
 <script>
 Modernizr.load({
 	test:Modernizr.inputtypes.range,
-	nope:['fd-slider.js','fd-slider.css'],
+	nope:['http://lineadecodigo.com/js/jquery/plugins/fd-slider.js','http://lineadecodigo.com/js/jquery/plugins/fd-slider.css'],
 	complete:function(){if(fdSlider)fdSlider.onDomReady();}
 });
 </script>
