--- a/lineadecodigo_web/WebContent/scripting/javascript_apis/modernizr/polyfills/placeholder/polyfill-placeholder.html
+++ b/lineadecodigo_web/WebContent/scripting/javascript_apis/modernizr/polyfills/placeholder/polyfill-placeholder.html
@@ -7,7 +7,7 @@
 <script>
 Modernizr.load({
 	test:Modernizr.input.placeholder,
-	nope:['http://lineadecodigo.com/js/jquery/jquery.js','http://lineadecodigo.com/js/jquery/plugins/jquery.placeholder.min.js','placeholder.js']
+	nope:['http://lineadecodigo.com/js/jquery/jquery.js','http://lineadecodigo.com/js/jquery/plugins/jquery.placeholder.min.js','http://lineadecodigo.com/js/jquery/plugins/placeholder.js']
 });
 </script>
 </head>
