Efecto Face con duración

--- a/lineadecodigo_web/WebContent/scripting/jQuery/efectos/efecto-fade.html
+++ b/lineadecodigo_web/WebContent/scripting/jQuery/efectos/efecto-fade.html
@@ -7,10 +7,10 @@
 <script type="text/javascript">
 $(document).ready(function(){
 	$("#ocultar").click(function(e){				
-		$("#logo").fadeOut();		
+		$("#logo").fadeOut(2000);		
 	});
 	$("#mostrar").click(function(e){				
-		$("#logo").fadeIn();		
+		$("#logo").fadeIn(2000);		
 	});	
 });
 </script>
