Cambiado el microdata a Schema.org

--- a/lineadecodigo_web/WebContent/markup/HTML5/Microdata/persona.html
+++ b/lineadecodigo_web/WebContent/markup/HTML5/Microdata/persona.html
@@ -7,7 +7,7 @@
 <body>
 <h1>Persona definida con Microdata</h1>
 
-<section itemscope itemtype="http://www.data-vocabulary.org/Person/">
+<section itemscope itemtype="http://schema.org/Person/">
 <a href="http://www.flickr.com/photos/victorcuervo/1332124805/" title="Foto de Victor"><img itemprop="photo" style="float:left; margin:20px;" src="http://farm2.staticflickr.com/1351/1332124805_5ba349b87c_q.jpg" width="150" height="150" alt="Foto de Víctor"></a>
 <strong>Nombre</strong>: <span itemprop="name">Víctor Cuervo</span><br/>
 <strong>Posición:</strong> <span itemprop="tittle">Editor</span> en  <span itemprop="affiliation">Aulambra</span><br/>
