Eliminados carácteres erróneos

--- a/lineadecodigo_web/WebContent/markup/HTML/frames/frame-sin-borde/frame-sin-borde.html
+++ b/lineadecodigo_web/WebContent/markup/HTML/frames/frame-sin-borde/frame-sin-borde.html
@@ -5,8 +5,8 @@
 <title>Frame sin borde</title>
 </head>
 <frameset cols="30%,*">
-    <frame src="frame_izq.html" name="izquierda" scrolling="no"/ frameborder="0">
-    <frame src="frame_der.html" name="superior"/ frameborder="0">
+    <frame src="frame_izq.html" name="izquierda" scrolling="no" frameborder="0">
+    <frame src="frame_der.html" name="superior" frameborder="0">
     <noframes>
     <body>
     <p>Esta p&aacute;gina utiliza frames. Su navegador no soporta frames.</p>
