--- a/lineadecodigo_javascript/pagina/obtener-hash.html
+++ b/lineadecodigo_javascript/pagina/obtener-hash.html
@@ -12,5 +12,10 @@ document.write("El hash de esta página es: "+location.hash);
 console.log(location.hash);
 </script>
 
+<br><br>
+<hr>
+Art&iacute;culo disponible en: <a href="http://lineadecodigo.com/javascript/acceder-al-hash-de-la-url-con-javascript/">http://lineadecodigo.com/javascript/acceder-al-hash-de-la-url-con-javascript/</a><br/>
+<a href="http://lineadecodigo.com" title="Linea de Codigo">lineadecodigo.com</a>
+
 </body>
 </html>
